fix: Adjust bottom padding in popup to fix FAB menu overlapping list item menu

--- a/src/app/modules/popup/components/popup/popup.component.scss
+++ b/src/app/modules/popup/components/popup/popup.component.scss
@@ -16,7 +16,7 @@ mat-sidenav-container {
 }
 
 .content {
-  padding: $padding;
+  padding: $padding $padding 4rem;
 }
 
 .menu {
